fix overflow-y & add no skills statement

--- a/assets/main.css
+++ b/assets/main.css
@@ -44,6 +44,7 @@ body {
   background-color: var(--main-bg);
   color: var(--main-clr);
   font-family: var(--font-family);
+  overflow-y: scroll;
 }
 
 ul {
